# Bidsificator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/api-ubuntu2204/: api.Dockerfile  devcontainer.json
bidsificator/: api.py  main.py
bidsificator/config/: config.example.yaml  config.yaml
bidsificator/controllers/: OptionController.py
bidsificator/core/: BidsFolder.py  BidsSubject.py  BidsUtilityFunctions.py  DataCrawler.py  OptionFile.py  validators.py
bidsificator/core/PyEEGFormat/: __init__.py  wrapperwin.cp311-win_amd64.pyd  wrapperwinamd64.cp310-win_amd64.pyd  wrapperwinamd64.cp311-win_amd64.pyd  wrapperwinamd64.cp312-win_amd64.pyd
bidsificator/forms/: FileEditor.ui  FileEditor_ui.py  MainWindow.ui  MainWindow_ui.py  OptionWindow.ui  OptionWindow_ui.py
bidsificator/ui/: FileEditor.py  MainWindow.py  OptionWindow.py  PatientTableWidget.py
bidsificator/workers/: BidsFilesProcss.py  BidsSubjectsProcess.py  ImportBidsFilesWorker.py  ImportBidsSubjectsWorker.py
