[tool.poetry]
name = "bidsificator"
version = "1.0.0"
description = ""
authors = ["Florian Sipp <florian.sipp@chuv.ch>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyqt6 = "^6.8.1"

# bids
numpy = "1.26"
dicom2nifti = ">=2.4.10"
bids_validator = ">=1.14.5"

# API
flasgger = "^0.9"
flask = "^3.0"
flask-cors = "^4.0"
flask-httpauth = "^4.8"
flask-restful = "^0.3"
flask_caching = "^2.3"

[tool.poetry.scripts]
bidsificator = "bidsificator.main:main"
bidsificator-api = "bidsificator.api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.lock'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
